alignment issues

--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -17,6 +17,3 @@
 .login-button:hover{
     background: #fa5252;
 }
-.landing-text{
-    text-align: center;
-}
